
2022-07-25  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (finalize_file), codegen.c (output_file_initialization):
	  moved -Wunsupported check for ORGANIZATION INDEXED from codegen
	  to parsing
	* tree.c, typeck.c: msgid change for -Wunsupported

2022-07-24  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (create_implicit_picture): explicit disallow generating picture
	  from FUNCTION which size is commonly unknown (and use of intrinsic
	  functions outside of PROCEDURE DIVISION is an extension already)
	* field.c (validate_elem_screen_clauses_std): require PIC in more cases

2022-07-19  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, typeck.c: temporary adjust source reference when building
	  registers to not point to an innocent source code
	* tree.c (cb_build_picture, char_to_precedence_idx): cater for possible
	  call without a current program
	* tree.c (cb_build_picture), tree.h: return cb_picture instead of cb_tree,
	  as all but one caller directly use it that way
	* field.c (cb_resolve_redefines): fixed reasonable compiler warning
	* typeck.c (cb_build_generic_register): finished VALUE definition and
	  checks, now handling numeric and alphanumeric literals (others prepared)
	* typeck.c, parser.y, cobc.h: moved external_defined_fields_global and
	  external_defined_fields_ws to the sole use: typeck.c
	* typeck.c: first time support for creating registers unknown to cobc
	  with configuration entry or -fregister, to allow this store the original
	  pre-validated definition in the new struct external_defined_register
	  and build the field when parsing for the program starts
	* help.c (cobc_print_usage_dialect): extended -fregister help

2022-07-18  Simon Sobisch <simonsobisch@gnu.org>

	* config.c (cb_config_entry): fixed defaultbyte convenience option
	* field.c (cb_build_full_field_reference): minimal refactoring
	* reserved.c (add_register): enabled generic register generation